tests/expectations/compiler/records/no_owner_fail.out
Error [ETYC0372019]: The `record` type requires the variable `owner: address`.
    --> compiler-test:4:5
     |
   4 |     record Token {
     |     ^^^^^^^^^^^^^^
   5 |         // The token amount.
     |         ^^^^^^^^^^^^^^^^^^^^
   6 |         amount: u64,
     |         ^^^^^^^^^^^^
   7 |     }
     |     ^
